--- a/index.html
+++ b/index.html
@@ -63,6 +63,19 @@
         </div>
 
         <div class="container" >
+          <div>
+              <button style="--clr:#0FF0FC"><span><a href="https://irshad-alungal.github.io/arshak/">Freelance Work</a></span><i></i></button>
+          </div>
+          <br>
+          <p class="my-link">I have created a website for friend.  He is a graphics designer.  He gave me the <a href="https://drive.google.com/file/d/1H08LhzCW4uJEX8KTtVg9bpqbWDYKfBAz/view">UI design</a>. I used HTML and CSS for that</p>
+          <div class="image-container">
+              <img src="html.png">
+              <img src="css-3.png">
+          </div>    
+          <div class="last"><strong>Published on December 11th, 2022</strong></div>
+          </div>
+
+        <div class="container" >
             <div>
                 <button style="--clr:#FF44CC"><span><a href="https://irshad-alungal.github.io/web/">My Portfolio</a></span><i></i></button>
             </div>
