--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         <div class="container" >
         <div>
-            <button style="--clr:#39FF14"><span><a href="https://64991cf0991e3f79a3e56e2f--splendorous-crumble-b987f2.netlify.app/">Kottakkal arya vaidya sala</a></span><i></i></button>
+            <button style="--clr:#39FF14"><span><a href="https://64991cf0991e3f79a3e56e2f--splendorous-crumble-b987f2.netlify.app/"><b>Kottakkal arya vaidya sala</b></a></span><i></i></button>
         </div>
         <br>
         <p>I built a website under the name of a company called Kottakkal Arya Vaidyasala. I used HTML, CSS and Bootstrap for that  . This company's office website was helpful for me to make this website.</p>
@@ -64,10 +64,10 @@
 
         <div class="container" >
           <div>
-              <button style="--clr:#0FF0FC"><span><a href="https://irshad-alungal.github.io/arshak/">Freelance Work</a></span><i></i></button>
+              <button style="--clr:#0FF0FC"><span><a href="https://irshad-alungal.github.io/arshak/"><b>Freelance Work</b></a></span><i></i></button>
           </div>
           <br>
-          <p class="my-link">I have created a website for friend.  He is a graphics designer.  He gave me the <a href="https://drive.google.com/file/d/1H08LhzCW4uJEX8KTtVg9bpqbWDYKfBAz/view">UI design</a>. I used HTML and CSS for that</p>
+          <p class="my-link">I have created a website for friend.  He is a graphics designer.  He gave me the <a href="https://drive.google.com/file/d/1H08LhzCW4uJEX8KTtVg9bpqbWDYKfBAz/view" class="animate-charcter">UI DESIGN</a>. I used HTML and CSS for that</p>
           <div class="image-container">
               <img src="html.png">
               <img src="css-3.png">
@@ -77,7 +77,7 @@
 
         <div class="container" >
             <div>
-                <button style="--clr:#FF44CC"><span><a href="https://irshad-alungal.github.io/web/">My Portfolio</a></span><i></i></button>
+                <button style="--clr:#FF44CC"><span><a href="https://irshad-alungal.github.io/web/"><b>My Portfolio</b></a></span><i></i></button>
             </div>
             <br>
             <p>I built a portfolio website using HTML, CSS and JavaScript. I referred two YouTube videos for that</p>
