--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
             </div>    
             <div class="last"><strong>Published on January 16th, 2022</strong></div>
             </div>
+            <div class="note"><p>JavaScript,Angular,React projects updating soon</p></div>
 
             
       </div>
