--- a/index.html
+++ b/index.html
@@ -88,6 +88,31 @@
             </div>    
             <div class="last"><strong>Published on January 16th, 2022</strong></div>
             </div>
+
+            <div class="container" >
+              <div>
+                  <button style="--clr:#096d42"><span><a href="https://irshad-alungal.github.io/old-web/"><b>My Old Portfolio</b></a></span><i></i></button>
+              </div>
+              <div class="image-container">
+                  <img src="html.png">
+                  <img src="css-3.png">
+                  <img src="js.png">
+              </div>    
+              <div class="last"><strong>Published on March 13th, 2021</strong></div>
+              </div>
+
+              <div class="container" >
+                <div>
+                    <button style="--clr:#fbff00"><span><a href="https://irshad-alungal.github.io/Portfplio-Website/"><b>My first website</b></a></span><i></i></button>
+                </div>
+                <div class="image-container">
+                    <img src="html.png">
+                    <img src="css-3.png">
+                    <img src="js.png">
+                </div>    
+                <div class="last"><strong>Published on August 19th, 2020</strong></div>
+                </div>
+
             <div class="note"><p>JavaScript, Angular and React projects updating soon.</p></div>
 
             
