--- a/index.html
+++ b/index.html
@@ -126,6 +126,30 @@
         </div>
 
         <div class="center">
+            <section id="item6">
+                <form action="#item6">
+                    <button style="--clr:#fc0328"><span><a href="" target="_blank"><b>Social Media</b></a></span><i></i></button>
+                </form>
+
+                <div class="hidden">
+                    <p></p>
+                    <div class="row">
+                <div class="column">
+                    <div class="image-container">
+                    <img src="html.png">
+                    <img src="css-3.png">
+                    </div></div>
+                <div class="column">
+                    <button class="glow-on-hover" type="button"><a href="https://irshad-alungal.github.io/social-media/" target="_blank" class="visit"><b>VISIT PROJECT</b></a></button>
+                </div>
+            </div>
+                        
+            <div class="last"><strong></strong></div>
+                </div>
+            </section>
+        </div>
+
+        <div class="center">
             <section id="item4">
                 <form action="#item4">
                     <button style="--clr:#096d42"><span><a href="" target="_blank"><b>My Old Portfolio</b></a></span><i></i></button>
