--- a/index.html
+++ b/index.html
@@ -52,6 +52,32 @@
 
 
         <div class="center">
+            <section id="item9">
+                <form action="#item9">
+                <button style="--clr:#201A4D" ><span><a href="" target="_blank"><b><span>Machine Test </span>- Matsio Digital</b></a></span><i></i></button>
+                </form>
+
+                <div class="hidden">
+                    <p>This is a machine test given to me by a company called <a href="https://matsio.com/" target="_blank" class="animate-charcter">Matsio Digital</a> as part of job hiring for front end developer position.  They sent me a <a href="https://www.figma.com/file/EpsQLLkLFHRsWpueLKNwdc/Frontend-Developer-Interview?type=design&node-id=4-43&mode=design&t=D7Bpskv2gThKsXf2-0" target="_blank" class="animate-charcter">Figma UI</a> of a model for it. </p>
+                    <div class="row">
+                <div class="column">
+                    <div class="image-container">
+                    <img src="html.png">
+                    <img src="css-3.png">
+                    <img src="js.png">
+                    <img src="git.png">
+                    </div></div>
+                <div class="column">
+                    <button class="glow-on-hover" type="button"><a href="https://64c231dce0125465958ec91f--celebrated-cat-407c65.netlify.app/" target="_blank" class="visit"><b>VISIT PROJECT</b></a></button>
+                </div>
+            </div>
+                        
+        <div class="last"><strong>Published on July 27th, 2023</strong></div>
+                </div>
+            </section>
+        </div>
+
+        <div class="center">
             <section id="item8">
                 <form action="#item8">
                 <button style="--clr:#201A4D" ><span><a href="" target="_blank"><b>Weather App</b></a></span><i></i></button>
@@ -82,7 +108,7 @@
         <div class="center">
             <section id="item7">
                 <form action="#item7">
-                <button style="--clr:#FF5733" ><span><a href="" target="_blank"><b>BrandM - Machine Test</b></a></span><i></i></button>
+                <button style="--clr:#FF5733" ><span><a href="" target="_blank"><b>BrandM - <span>Machine Test</span></b></a></span><i></i></button>
                 </form>
 
                 <div class="hidden">
