--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="center">
             <section id="item9">
                 <form action="#item9">
-                <button style="--clr:#201A4D" ><span><a href="" target="_blank"><b><span>Machine Test </span>- Matsio Digital</b></a></span><i></i></button>
+                <button style="--clr:#72c8c5" ><span><a href="" target="_blank"><b><span>Machine Test </span>- Matsio Digital</b></a></span><i></i></button>
                 </form>
 
                 <div class="hidden">
@@ -108,7 +108,7 @@
         <div class="center">
             <section id="item7">
                 <form action="#item7">
-                <button style="--clr:#FF5733" ><span><a href="" target="_blank"><b>BrandM - <span>Machine Test</span></b></a></span><i></i></button>
+                <button style="--clr:#FF5733" ><span><a href="" target="_blank"><b><span>Machine Test</span> - BrandM</b></a></span><i></i></button>
                 </form>
 
                 <div class="hidden">
