--- a/index.html
+++ b/index.html
@@ -284,10 +284,25 @@
                 </div>
             </section>
         </div>
-
+        <div>
+            <h4 class="animate-charcter">skill known</h4>
+            <div class="skill-img">
+                <img src="html.png">
+                <img src="css-3.png">
+                <img src="sass.png">
+                <img src="js.png">
+                <img src="bootstrap.png">
+                <img src="tailwind.png">
+                <img src="json.png">
+                <img src="git.png">
+                <img src="github.png">
+                <img src="angular.png">
+                <img src="react.png">
+            </div>
+        </div>
         
 
-            <div class="note"><p>JavaScript, Angular and React projects updating soon.</p></div>
+            <div class="note"><p>NB: Tailwind, SASS, Angular and React projects updating soon.</p></div>
 
             
       </div>
