--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
         </div>
         
 
-            <div class="note"><p>NB: Tailwind, SASS, Angular, and React projects updating soon.</p></div>
+            <div class="note"><p>NB: Tailwind, SASS, Angular and React projects uploading soon.</p></div>
 
             
     </div>
