--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
   <div class="accordion-item">
     <h2 class="accordion-header">
       <button style="--clr:#096d42" class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse9" aria-expanded="false" aria-controls="collapse9">
-        <span><a href="" target="_blank"><b>My Old Portfolio</b></a></span><i></i>
+        <span><a><b>My Old Portfolio</b></a></span><i></i>
       </button>
     </h2>
     <div id="collapse9" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
@@ -258,7 +258,7 @@
   <div class="accordion-item">
     <h2 class="accordion-header">
       <button style="--clr:#fbff00" class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-        <span><a href="" target="_blank"><b>My first website</b></a></span><i></i>
+        <span><a><b>My first website</b></a></span><i></i>
       </button>
     </h2>
     <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
