--- a/index.html
+++ b/index.html
@@ -77,17 +77,51 @@
                 <div class="accordion" id="accordionExample">
                     <div class="accordion-item">
                         <h2 class="accordion-header">
-                            <button style="--clr:#72c8c5" class="accordion-button" type="button"
-                                data-bs-toggle="collapse" data-bs-target="#collapse10" aria-expanded="true"
+                            <button style="--clr:#CAE00F" class="accordion-button" type="button"
+                                data-bs-toggle="collapse" data-bs-target="#collapse11" aria-expanded="true"
+                                aria-controls="collapse11">
+                                <span><a><b>Students List - Angular </b></a></span><i></i>
+                            </button>
+                        </h2>
+                        <div id="collapse11" class="accordion-collapse collapse show"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <p>This is an app built using Angular. I created the JSON api and deployed it using
+                                    Render and GitHub. This Angular project deployed in Netlify. Tailwind CSS used for framework.</p>
+                                <div class="row">
+                                    <div class="column">
+                                        <div class="image-container">
+                                            <img src="angular.png">
+                                            <img src="tailwind.png">
+                                            <img src="git.png">
+                                            <img src="github.png">
+                                            <img src="netlify.png">
+                                        </div>
+                                    </div>
+                                    <div class="column">
+                                        <button class="glow-on-hover" type="button"><a
+                                                href="https://64d3b8f9a4ea5b032a56b645--keen-concha-ef0457.netlify.app/"
+                                                target="_blank" class="visit"><b>VISIT PROJECT</b></a></button>
+                                    </div>
+                                </div>
+
+                                <div class="last"><strong>Published on August 6th, 2023</strong></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button style="--clr:#0CC23B" class="accordion-button" type="button"
+                                data-bs-toggle="collapse" data-bs-target="#collapse10" aria-expanded="false"
                                 aria-controls="collapse10">
                                 <span><a><b><span>Machine Test </span>- Lilac Infotech</b></a></span><i></i>
                             </button>
                         </h2>
-                        <div id="collapse10" class="accordion-collapse collapse show"
-                            data-bs-parent="#accordionExample">
+                        <div id="collapse10" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                                <p>This is a machine test given to me by a company called <a href="https://lilacinfotech.com/"
-                                        target="_blank" class="animate-charcter">Lilac Infotech Pvt. Ltd</a> as part of job
+                                <p>This is a machine test given to me by a company called <a
+                                        href="https://lilacinfotech.com/" target="_blank" class="animate-charcter">Lilac
+                                        Infotech Pvt. Ltd</a> as part of job
                                     hiring for front end developer position. They sent me a <a
                                         href="https://drive.google.com/file/d/1jcQDIDwalvKAa9bCaEpDkY0BBITJotTw/preview"
                                         target="_blank" class="animate-charcter">Design</a> of a model for it. </p>
@@ -119,8 +153,7 @@
                                 <span><a><b><span>Machine Test </span>- Matsio Digital</b></a></span><i></i>
                             </button>
                         </h2>
-                        <div id="collapseOne" class="accordion-collapse collapse"
-                            data-bs-parent="#accordionExample">
+                        <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
                                 <p>This is a machine test given to me by a company called <a href="https://matsio.com/"
                                         target="_blank" class="animate-charcter">Matsio Digital</a> as part of job
