--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 
             <div class="center">
                 <div class="accordion" id="accordionExample">
+                    
                     <div class="accordion-item">
                         <h2 class="accordion-header">
                             <button style="--clr:#CAE00F" class="accordion-button" type="button"
@@ -87,7 +88,9 @@
                             data-bs-parent="#accordionExample">
                             <div class="accordion-body">
                                 <p>This is an app built using Angular. I created the JSON api and deployed it using
-                                    Render and GitHub. This Angular project deployed in Netlify. Tailwind CSS used for framework.</p>
+                                    Render and GitHub. This Angular project deployed in Netlify. Tailwind CSS used for
+                                    framework. (The API is deployed using github so the project will take some time to
+                                    load...)</p>
                                 <div class="row">
                                     <div class="column">
                                         <div class="image-container">
@@ -106,6 +109,44 @@
                                 </div>
 
                                 <div class="last"><strong>Published on August 9th, 2023</strong></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button style="--clr:#0969ff" class="accordion-button" type="button"
+                                data-bs-toggle="collapse" data-bs-target="#collapse12" aria-expanded="true"
+                                aria-controls="collapse12">
+                                <span><a><b><span>Machine Test </span>- Posibolt solutions </b></a></span><i></i>
+                            </button>
+                        </h2>
+                        <div id="collapse12" class="accordion-collapse collapse "
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <p>This is a offline machine test given to me by a company called <a href="https://www.posibolt.com/"
+                                    target="_blank" class="animate-charcter">Posibolt Solutions</a> as part of job
+                                hiring for front end developer position. They sent me a <a
+                                    href="https://www.figma.com/file/CHSdh86Y7kEOozZ8AOPoqI/Untitled?type=design&node-id=0-1&mode=design"
+                                    target="_blank" class="animate-charcter">Figma UI</a> of a model for it. </p>
+                                <div class="row">
+                                    <div class="column">
+                                        <div class="image-container">
+                                            <img src="html.png">
+                                            <img src="css-3.png">
+                                            <img src="jQuery.png">
+                                            <img src="bootstrap.png">
+                                            <img src="git.png">
+                                            <img src="github.png">
+                                        </div>
+                                    </div>
+                                    <div class="column">
+                                        <button class="glow-on-hover" type="button"><a
+                                                href="https://irshad-alungal.github.io/posibolt/"
+                                                target="_blank" class="visit"><b>VISIT PROJECT</b></a></button>
+                                    </div>
+                                </div>
+
+                                <div class="last"><strong>Published on August 23rd, 2023</strong></div>
                             </div>
                         </div>
                     </div>
@@ -447,6 +488,7 @@
                     <img src="css-3.png">
                     <img src="sass.png">
                     <img src="js.png">
+                    <img src="jQuery.png">
                     <img src="bootstrap.png">
                     <img src="tailwind.png">
                     <img src="json.png">
@@ -459,7 +501,7 @@
 
 
             <div class="note">
-                <p>NB: Tailwind, SASS, Angular and React projects uploading soon.</p>
+                <p>NB: SASS and React projects uploading soon.</p>
             </div>
 
         </div>
