--- a/index.html
+++ b/index.html
@@ -78,13 +78,44 @@
                     
                     <div class="accordion-item">
                         <h2 class="accordion-header">
+                            <button style="--clr:#cf332b" class="accordion-button" type="button"
+                                data-bs-toggle="collapse" data-bs-target="#collapse13" aria-expanded="true"
+                                aria-controls="collapse13">
+                                <span><a><b>Portfolio - WordPress </b></a></span><i></i>
+                            </button>
+                        </h2>
+                        <div id="collapse13" class="accordion-collapse collapse show"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <p>This is my portfolio created by using WordPress. This WordPress project deployed in Netlify</p>
+                                <div class="row">
+                                    <div class="column">
+                                        <div class="image-container">
+                                            <img src="wordpress.svg">
+                                            <img src="elementor.svg">
+                                            <img src="netlify.png">
+                                        </div>
+                                    </div>
+                                    <div class="column">
+                                        <button class="glow-on-hover" type="button"><a
+                                                href="https://quiet-marshmallow-ff3643.netlify.app/"
+                                                target="_blank" class="visit"><b>VISIT PROJECT</b></a></button>
+                                    </div>
+                                </div>
+
+                                <div class="last"><strong>Published on September 3rd, 2023</strong></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
                             <button style="--clr:#CAE00F" class="accordion-button" type="button"
                                 data-bs-toggle="collapse" data-bs-target="#collapse11" aria-expanded="true"
                                 aria-controls="collapse11">
                                 <span><a><b>Students List - Angular </b></a></span><i></i>
                             </button>
                         </h2>
-                        <div id="collapse11" class="accordion-collapse collapse show"
+                        <div id="collapse11" class="accordion-collapse collapse "
                             data-bs-parent="#accordionExample">
                             <div class="accordion-body">
                                 <p>This is an app built using Angular. I created the JSON api and deployed it using
