--- a/index.html
+++ b/index.html
@@ -527,6 +527,7 @@
                     <img src="github.png">
                     <img src="angular.png">
                     <img src="react.png">
+                    <img src="wordpress.svg">
                 </div>
             </div>
 
