--- a/index.html
+++ b/index.html
@@ -78,13 +78,50 @@
                     
                     <div class="accordion-item">
                         <h2 class="accordion-header">
+                            <button style="--clr:#1a80fe" class="accordion-button" type="button"
+                                data-bs-toggle="collapse" data-bs-target="#collapse14" aria-expanded="true"
+                                aria-controls="collapse14">
+                                <span><a><b><span>Assignment </span>- Techjet pvt Ltd </b></a></span><i></i>
+                            </button>
+                        </h2>
+                        <div id="collapse14" class="accordion-collapse collapse show"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <p>This is a offline machine test given to me by a company called <a href="https://techjet.ai/"
+                                    target="_blank" class="animate-charcter">Techjet pvt Ltd</a> as part of job
+                                hiring for WordPress developer position. They sent me a <a
+                                    href="https://drive.google.com/file/d/1zeY3DG9LsG2slR8cVNdckgf7bWzD-BNR/view?usp=drive_link"
+                                    target="_blank" class="animate-charcter">design</a> of a model for it. </p>
+                                <div class="row">
+                                    <div class="column">
+                                        <div class="image-container">
+                                            <img src="wordpress.svg">
+                                            <img src="elementor.svg">
+                                            <img src="html.png">
+                                            <img src="css-3.png">
+                                            <img src="netlify.png">
+                                        </div>
+                                    </div>
+                                    <div class="column">
+                                        <button class="glow-on-hover" type="button"><a
+                                                href="https://neon-flan-43e692.netlify.app/"
+                                                target="_blank" class="visit"><b>VISIT PROJECT</b></a></button>
+                                    </div>
+                                </div>
+
+                                <div class="last"><strong>Published on September 6th, 2023</strong></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
                             <button style="--clr:#cf332b" class="accordion-button" type="button"
                                 data-bs-toggle="collapse" data-bs-target="#collapse13" aria-expanded="true"
                                 aria-controls="collapse13">
                                 <span><a><b>Portfolio - WordPress </b></a></span><i></i>
                             </button>
                         </h2>
-                        <div id="collapse13" class="accordion-collapse collapse show"
+                        <div id="collapse13" class="accordion-collapse collapse"
                             data-bs-parent="#accordionExample">
                             <div class="accordion-body">
                                 <p>This is my portfolio created by using WordPress. This WordPress project deployed in Netlify</p>
