--- a/index.html
+++ b/index.html
@@ -75,7 +75,42 @@
 
             <div class="center">
                 <div class="accordion" id="accordionExample">
-                    
+
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button style="--clr:#5e17eb" class="accordion-button" type="button"
+                                data-bs-toggle="collapse" data-bs-target="#collapse15" aria-expanded="true"
+                                aria-controls="collapse15">
+                                <span><a><b>woocommerce WordPress</b></a></span><i></i>
+                            </button>
+                        </h2>
+                        <div id="collapse15" class="accordion-collapse collapse show"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <p>This is an ecommerce website I made using WordPress. In this I have used plugins
+                                    called Elementor, WooCommerce, TI WooCommerce Wishlist, Variation Swatches for
+                                    WooCommerce, Classic Widgets, Payment Plugins for PayPal WooCommerce. Also some
+                                    short code is used. </p>
+                                <div class="row">
+                                    <div class="column">
+                                        <div class="image-container">
+                                            <img src="wordpress.svg">
+                                            <img src="elementor.svg">
+                                            <img src="woocommerce.png">
+                                            <img src="netlify.png">
+                                        </div>
+                                    </div>
+                                    <div class="column">
+                                        <button class="glow-on-hover" type="button"><a
+                                                href="https://velvety-pudding-87b629.netlify.app/" target="_blank"
+                                                class="visit"><b>VISIT PROJECT</b></a></button>
+                                    </div>
+                                </div>
+
+                                <div class="last"><strong>Published on September 12th, 2023</strong></div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="accordion-item">
                         <h2 class="accordion-header">
                             <button style="--clr:#1a80fe" class="accordion-button" type="button"
@@ -84,14 +119,15 @@
                                 <span><a><b><span>Assignment </span>- Techjet pvt Ltd </b></a></span><i></i>
                             </button>
                         </h2>
-                        <div id="collapse14" class="accordion-collapse collapse show"
+                        <div id="collapse14" class="accordion-collapse collapse"
                             data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                                <p>This is a offline machine test given to me by a company called <a href="https://techjet.ai/"
-                                    target="_blank" class="animate-charcter">Techjet pvt Ltd</a> as part of job
-                                hiring for WordPress developer position. They sent me a <a
-                                    href="https://drive.google.com/file/d/1zeY3DG9LsG2slR8cVNdckgf7bWzD-BNR/view?usp=drive_link"
-                                    target="_blank" class="animate-charcter">design</a> of a model for it. </p>
+                                <p>This is a offline machine test given to me by a company called <a
+                                        href="https://techjet.ai/" target="_blank" class="animate-charcter">Techjet pvt
+                                        Ltd</a> as part of job
+                                    hiring for WordPress developer position. They sent me a <a
+                                        href="https://drive.google.com/file/d/1zeY3DG9LsG2slR8cVNdckgf7bWzD-BNR/view?usp=drive_link"
+                                        target="_blank" class="animate-charcter">design</a> of a model for it. </p>
                                 <div class="row">
                                     <div class="column">
                                         <div class="image-container">
@@ -104,8 +140,8 @@
                                     </div>
                                     <div class="column">
                                         <button class="glow-on-hover" type="button"><a
-                                                href="https://neon-flan-43e692.netlify.app/"
-                                                target="_blank" class="visit"><b>VISIT PROJECT</b></a></button>
+                                                href="https://neon-flan-43e692.netlify.app/" target="_blank"
+                                                class="visit"><b>VISIT PROJECT</b></a></button>
                                     </div>
                                 </div>
 
@@ -121,10 +157,10 @@
                                 <span><a><b>Portfolio - WordPress </b></a></span><i></i>
                             </button>
                         </h2>
-                        <div id="collapse13" class="accordion-collapse collapse"
-                            data-bs-parent="#accordionExample">
+                        <div id="collapse13" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                                <p>This is my portfolio created by using WordPress. This WordPress project deployed in Netlify</p>
+                                <p>This is my portfolio created by using WordPress. This WordPress project deployed in
+                                    Netlify</p>
                                 <div class="row">
                                     <div class="column">
                                         <div class="image-container">
@@ -135,8 +171,8 @@
                                     </div>
                                     <div class="column">
                                         <button class="glow-on-hover" type="button"><a
-                                                href="https://quiet-marshmallow-ff3643.netlify.app/"
-                                                target="_blank" class="visit"><b>VISIT PROJECT</b></a></button>
+                                                href="https://quiet-marshmallow-ff3643.netlify.app/" target="_blank"
+                                                class="visit"><b>VISIT PROJECT</b></a></button>
                                     </div>
                                 </div>
 
@@ -152,8 +188,7 @@
                                 <span><a><b>Students List - Angular </b></a></span><i></i>
                             </button>
                         </h2>
-                        <div id="collapse11" class="accordion-collapse collapse "
-                            data-bs-parent="#accordionExample">
+                        <div id="collapse11" class="accordion-collapse collapse " data-bs-parent="#accordionExample">
                             <div class="accordion-body">
                                 <p>This is an app built using Angular. I created the JSON api and deployed it using
                                     Render and GitHub. This Angular project deployed in Netlify. Tailwind CSS used for
@@ -188,14 +223,14 @@
                                 <span><a><b><span>Machine Test </span>- Posibolt solutions </b></a></span><i></i>
                             </button>
                         </h2>
-                        <div id="collapse12" class="accordion-collapse collapse "
-                            data-bs-parent="#accordionExample">
+                        <div id="collapse12" class="accordion-collapse collapse " data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                                <p>This is a offline machine test given to me by a company called <a href="https://www.posibolt.com/"
-                                    target="_blank" class="animate-charcter">Posibolt Solutions</a> as part of job
-                                hiring for front end developer position. They sent me a <a
-                                    href="https://www.figma.com/file/CHSdh86Y7kEOozZ8AOPoqI/Untitled?type=design&node-id=0-1&mode=design"
-                                    target="_blank" class="animate-charcter">Figma UI</a> of a model for it. </p>
+                                <p>This is a offline machine test given to me by a company called <a
+                                        href="https://www.posibolt.com/" target="_blank"
+                                        class="animate-charcter">Posibolt Solutions</a> as part of job
+                                    hiring for front end developer position. They sent me a <a
+                                        href="https://www.figma.com/file/CHSdh86Y7kEOozZ8AOPoqI/Untitled?type=design&node-id=0-1&mode=design"
+                                        target="_blank" class="animate-charcter">Figma UI</a> of a model for it. </p>
                                 <div class="row">
                                     <div class="column">
                                         <div class="image-container">
@@ -209,8 +244,8 @@
                                     </div>
                                     <div class="column">
                                         <button class="glow-on-hover" type="button"><a
-                                                href="https://irshad-alungal.github.io/posibolt/"
-                                                target="_blank" class="visit"><b>VISIT PROJECT</b></a></button>
+                                                href="https://irshad-alungal.github.io/posibolt/" target="_blank"
+                                                class="visit"><b>VISIT PROJECT</b></a></button>
                                     </div>
                                 </div>
 
