--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                             <button style="--clr:#5e17eb" class="accordion-button" type="button"
                                 data-bs-toggle="collapse" data-bs-target="#collapse15" aria-expanded="true"
                                 aria-controls="collapse15">
-                                <span><a><b>woocommerce WordPress</b></a></span><i></i>
+                                <span><a><b>Woocommerce WordPress</b></a></span><i></i>
                             </button>
                         </h2>
                         <div id="collapse15" class="accordion-collapse collapse show"
