--- a/index.html
+++ b/index.html
@@ -182,6 +182,39 @@
                     </div>
                     <div class="accordion-item">
                         <h2 class="accordion-header">
+                            <button style="--clr:#34a853" class="accordion-button" type="button"
+                                data-bs-toggle="collapse" data-bs-target="#collapse16" aria-expanded="true"
+                                aria-controls="collapse16">
+                                <span><a><b>Google Home Page</b></a></span><i></i>
+                            </button>
+                        </h2>
+                        <div id="collapse16" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                
+                                <div class="row">
+                                    <div class="column">
+                                        <div class="image-container">
+                                            <img src="html.png">
+                                            <img src="css-3.png">
+                                            <img src="js.png">
+                                            <img src="git.png">
+                                            <img src="github.png">
+                                            <img src="netlify.png">
+                                        </div>
+                                    </div>
+                                    <div class="column">
+                                        <button class="glow-on-hover" type="button"><a
+                                                href="https://voluble-gumdrop-49489e.netlify.app/" target="_blank"
+                                                class="visit"><b>VISIT PROJECT</b></a></button>
+                                    </div>
+                                </div>
+
+                                <div class="last"><strong>Published on September 20th, 2023</strong></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
                             <button style="--clr:#CAE00F" class="accordion-button" type="button"
                                 data-bs-toggle="collapse" data-bs-target="#collapse11" aria-expanded="true"
                                 aria-controls="collapse11">
